--- a/header.html
+++ b/header.html
@@ -2,7 +2,7 @@
 <div class="header-container">
   <div class="header-top">
     <div class="container">
-
+      <input id="inC" type="text" value="تم الاضافه لعربه التسوق" hidden>
       <div class="row">
         <div class="col-sm-4 col-md-4 col-xs-12">
           <ul style="list-style: none;" id="zones">
@@ -61,7 +61,7 @@
 
           <!-- Header Logo -->
           <div class="logo"><a title="e-commerce" href="index.html"><img alt="ShopMart" title="ShopMart"
-                src="images/logofinal.png" style="width:300px;"></a> </div>
+                src="images/logo.png" style="width:300px;"></a> </div>
         </div>
         <div class="col-xs-12 col-sm-5 col-md-6 jtv-top-search">
 
@@ -90,8 +90,9 @@
           <a>
             <div class="top-cart-contain ">
               <div class="mini-cart">
-                <div class="basket "> <a href="shopping_cart.html">
-                    <div id="cartNo" class="cart-icon"></div>
+                <div class="basket "> <a href="cart.html">
+                    <div id="cartNo" class="cart-icon"><i class="icon-basket-loaded icons"></i><span class="cart-total"
+                        id="cart-total">0</span></div>
                     <div class="shoppingcart-inner hidden-xs"><span class="cart-title">My Cart</span> </div>
                   </a></div>
                 <div>
@@ -140,6 +141,7 @@
 </div>
 <script src="js/apiHeader.js"></script>
 <script src="js/header.js"></script>
+<!-- <script src="js/main.js"></script> -->
 <script src="js/cart.js"></script>
 
 
