--- a/login.html
+++ b/login.html
@@ -277,7 +277,7 @@
                                             </span></a></li>
 
 
-                                    <li><a title="login" href="/register"><span>
+                                    <li><a title="login" href="/register.html"><span>
                                                 إنشاء حساب
                                             </span></a></li>
 
@@ -482,7 +482,7 @@
                         <div class="col-md-3 col-sm-2"></div>
                         <div class="col-md-6 col-sm-8">
                             <div class="single-input p-bottom50 clearfix">
-                                <form action="/login" method="POST">
+                                <form action="/login" method="POST" id="login-form">
                                     <div class="row">
                                         <div class="col-xs-12">
                                             <div class="check-title">
@@ -498,7 +498,8 @@
                                                 البريد الألكتروني
                                             </label>
                                             <div class="input-text">
-                                                <input type="text" name="email" class="form-control" required>
+                                                <input type="text" name="email" class="form-control" required
+                                                    id="email_login">
                                             </div>
                                         </div>
 
@@ -507,7 +508,8 @@
                                                 كلمه السر
                                             </label>
                                             <div class="input-text">
-                                                <input type="password" name="password" class="form-control" required>
+                                                <input type="password" name="password" class="form-control" required
+                                                    id="password_login">
                                             </div>
                                         </div>
                                         <div class="col-xs-12" style="margin-top: 20px;">
@@ -747,14 +749,220 @@
     <!--jquery-ui.min js -->
     <script type="text/javascript" src="js/jquery-ui.js"></script>
 
-    <!-- main js -->
-    <script type="text/javascript" src="js/main.js"></script>
 
     <!-- countdown js -->
     <script type="text/javascript" src="js/countdown.js"></script>
 
     <!-- Slider Js -->
     <script type="text/javascript" src="js/revolution-slider.js"></script>
+    <script>
+        var hostname = window.location.origin;
+        var queryString = window.location.search;
+        var lang = "en"
+        var urlParams = new URLSearchParams(queryString);
+        if (urlParams.get('lang')) {
+            lang = urlParams.get('lang')
+        }
+        var formlogin = document.getElementById("login-form");
+
+        function login() {
+            formlogin.addEventListener('submit', function (evt) {
+                evt.preventDefault();
+                var email_login = document.getElementById("email_login").value;
+                var password_login = document.getElementById("password_login").value;
+                // var fcm_login = document.getElementById("fcm_login").value;
+                console.log(email_login)
+                fetch("http://aaaserver-001-site31.ftempurl.com/" + lang + "/api/Auth/Login", {
+                        method: 'POST',
+                        body: JSON.stringify({
+                            email: email_login,
+                            password: password_login,
+                            // fcm: fcm_login
+                        }),
+                        headers: {
+                            "Access-Control-Allow-Origin": "*",
+                            "content-type": "application/json; charset=utf-8"
+                        }
+                    }).then(function (response) {
+                        console.log(response.status); // Will show you the status
+                        if (!response.ok) {
+                            var err = document.getElementById("Loginerror")
+                            err.innerHTML = "<p>Email or Password is Invalid</p>"
+
+                        } else
+
+                            return response.json();
+
+
+                    })
+
+                    .then(function (data) {
+
+                        getProfileuser()
+
+                        localStorage.setItem("Login", "Logout")
+                        sessionStorage.setItem("token", JSON.stringify(data.token));
+                        getProfileuser();
+                        window.location.replace(hostname + "/profile.html");
+
+                    })
+
+            })
+        }
+        login()
+
+        function onSignIn(googleUser) {
+            var profile = googleUser.getBasicProfile();
+            console.log('ID: ' + profile.getId()); // Do not send to your backend! Use an ID token instead.
+            console.log('Name: ' + profile.getName());
+            console.log('Image URL: ' + profile.getImageUrl());
+            console.log('Email: ' + profile.getEmail()); // This is null if the 'email' scope is not present.
+            console.log('token' + googleUser.getAuthResponse().id_token)
+            var googleTokenId = profile.getId();
+            var name = profile.getName();
+            var email = profile.getEmail();
+            var codeNo = parseInt(googleTokenId);
+            var id_token = JSON.stringify(googleUser.getAuthResponse().id_token)
+
+            console.log("token", id_token);
+            var profile = profile.getImageUrl();
+            $("#loaderIcon").show('fast');
+            $("#g-signin2").show('fast');
+            fetch("http://aaaserver-001-site31.ftempurl.com/" + lang + "/api/Auth/ExternalLogin", {
+                method: 'POST',
+                body: JSON.stringify({
+                    fullName: name,
+                    email: email,
+                    externalLoginId: "Google",
+                    externalLoginProvider: profile.getId,
+                }),
+                headers: {
+                    "Access-Control-Allow-Origin": "*",
+                    "content-type": "application/json; charset=utf-8"
+                }
+            }).then(function (response) {
+                console.log(response.status); // Will show you the status
+                if (!response.ok) {
+                    var err = document.getElementById("Loginerror")
+
+
+                } else
+
+                    return response.json();
+
+
+            }).then(function (data) {
+
+                sessionStorage.setItem("token", JSON.stringify(data.token));
+                // console.log(email)
+                // console.log(data.token)
+                // sessionStorage.setItem("token",JSON.stringify(data.token));
+                // window.location.replace("http://127.0.0.1:5500/checkout.html");
+
+            })
+
+        }
+
+        function getProfile(event) {
+
+
+            var id = parseInt(event)
+
+
+            var token = JSON.parse(sessionStorage.getItem('token'));
+            fetch("http://aaaserver-001-site31.ftempurl.com/" + lang + "/api/Favorites/LikeProduct", {
+                    method: 'POST',
+                    body: JSON.stringify({
+                        product_Id: id
+                    }),
+                    headers: {
+                        "Authorization": `Bearer ${token}`,
+                        "content-type": "application/json; charset=utf-8"
+                    }
+                }).then(function (response) {
+                    // console.log(response.status); // Will show you the status
+                    // if (!response.ok) {
+                    //     throw new Error("HTTP status " + response.status);
+                    // }
+                    return response.json();
+
+                })
+
+                .then(function (data) {
+
+
+                }).catch(err => {
+
+                })
+            // .catch(error => console.log("invalid ") );
+
+
+
+
+        }
+
+        function checkLoginState() {
+            FB.getLoginStatus(function (response) {
+                statusChangeCallback(response);
+            });
+        }
+
+        function getProfileuser() {
+            var token = JSON.parse(sessionStorage.getItem('token'));
+            var httprequest = new XMLHttpRequest();
+            httprequest.open("GET", "http://aaaserver-001-site31.ftempurl.com/" + lang + "/api/User/Profile");
+            httprequest.setRequestHeader('Authorization', `Bearer ${token}`)
+            httprequest.send();
+            httprequest.onreadystatechange = function () {
+                if (httprequest.status == 200 && httprequest.readyState == 4) {
+                    var Data = JSON.parse(httprequest.response)
+
+                    localStorage.setItem("userName", Data.fullName)
+
+                }
+
+
+            }
+
+        }
+
+
+        function loginPass() {
+            var x = document.getElementById("password_login");
+            if (x.type === "password") {
+                x.type = "text"
+            } else {
+                x.type = "password"
+            }
+        }
+
+        function cfPass() {
+            var x = document.getElementById("fcm_login");
+            if (x.type === "password") {
+                x.type = "text"
+            } else {
+                x.type = "password"
+            }
+        }
+
+        function myFunction() {
+            var x = document.getElementById("pass_register");
+            if (x.type === "password") {
+                x.type = "text";
+            } else {
+                x.type = "password";
+            }
+        }
+
+        function showCfPass() {
+            var x = document.getElementById("cf_register");
+            if (x.type === "password") {
+                x.type = "text";
+            } else {
+                x.type = "password";
+            }
+        }
+    </script>
 
 
 
