--- a/shop_grid.html
+++ b/shop_grid.html
@@ -32,7 +32,7 @@
   <![endif]-->
 
   <!-- mobile menu -->
-  <div id="mobile-menu">
+  <!-- <div id="mobile-menu">
     <ul>
       <li><a href="index.html" class="home1">Home Pages</a>
         <ul>
@@ -222,7 +222,7 @@
       <li><a href="shop_grid.html">Laptop</a></li>
       <li><a href="shop_grid.html">Accessories</a></li>
     </ul>
-  </div>
+  </div> -->
   <!-- end mobile menu -->
   <div id="page">
 
