--- a/cart.html
+++ b/cart.html
@@ -916,7 +916,7 @@
                     </tfoot>
                   </table>
                 </div>
-                <div class="cart_navigation"> <a class="continue-btn" href="index.html"><i class="fa fa-arrow-left">
+                <div class="cart_navigation"> <a class="continue-btn" href="shop_grid.html"><i class="fa fa-arrow-left">
                     </i>&nbsp; Continue shopping</a> <a class="checkout-btn" href="checkout.html"><i
                       class="fa fa-check"></i> Proceed to checkout</a> </div>
               </div>
@@ -1126,10 +1126,9 @@
 
   <!--jquery-ui.min js -->
   <script type="text/javascript" src="js/jquery-ui.js"></script>
-  <script src="js/apiHeader.js"></script>
   <script type="text/javascript" src="js/cart.js"></script>
   <!-- main js -->
-  <!-- <script type="text/javascript" src="js/main.js"></script>  -->
+  <!-- <script type="text/javascript" src="js/cart.js"></script>  -->
 
 
 </body>
