--- a/index.html
+++ b/index.html
@@ -470,36 +470,17 @@
     <div class="main-slider" id="home">
       <div class="container">
         <div class="row">
-          <div class="col-md-3 col-sm-3 col-xs-12 banner-left hidden-xs">
-            <div> <a href="offers-1">
-                <object data="http://aaaserver-001-site31.ftempurl.com/Uploads/Offers/1.jpg?q=-8585467235452899896 ">
-                  <img class="first-img " src="images/banner-arrival.jpg " alt="عروض متجرنا">
-                </object>
-              </a>
-              <div class="text-des-container">
-                <div class="text-des">
-                  <h2>
-                    عروض متجرنا
-                  </h2>
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="col-sm-9 col-md-9 col-lg-9 col-xs-12 jtv-slideshow">
+
+          <div class="col-sm-12 col-md-12 col-lg-12 col-xs-12 jtv-slideshow">
             <div id="jtv-slideshow">
               <div id='rev_slider_4_wrapper' class='rev_slider_wrapper fullwidthbanner-container'>
                 <div id='rev_slider_4' class='rev_slider fullwidthabanner'>
                   <ul>
-
                     <li data-transition='fade' data-slotamount='7' data-masterspeed='1000' data-thumb=''>
-
                       <img
                         src="http://aaaserver-001-site31.ftempurl.com/Uploads/Sliders/1010.jpg?q=-8585467235452782779"
                         data-bgfit='cover' data-bgrepeat='no-repeat' alt="banner" />
-
                     </li>
-
-
                   </ul>
                   <div class="tp-bannertimer"></div>
                 </div>
@@ -587,6 +568,25 @@
       </div>
     </div>
     </br></br></br>
+    <div class="row">
+      <div class="col-md-6 col-sm-6 col-xs-12 banner-left hidden-xs">
+        <div> <a href="">
+            <object data="http://aaaserver-001-site31.ftempurl.com/Uploads/Offers/1.jpg?q=-8585467235452899896 "
+              style="width: 100%;">
+              <img class="first-img " src="images/banner-arrival.jpg " alt="عروض متجرنا">
+            </object>
+          </a>
+          <div class="text-des-container">
+            <div class="text-des">
+              <h2>
+                عروض متجرنا
+              </h2>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
 
 
     <div class="inner-box">
