cats inside main cats

--- a/index.html
+++ b/index.html
@@ -408,7 +408,7 @@
               </div>
 
               <!-- Shop by category -->
-              <div class="mega-menu-category">
+              <div class="mega-menu-category" style="display: block">
                 <ul class="nav ">
 
                 </ul>
