--- a/login.html
+++ b/login.html
@@ -512,6 +512,9 @@
                                                     id="password_login">
                                             </div>
                                         </div>
+                                        <div>
+                                            <h4 id="Loginerror"></h4>
+                                        </div>
                                         <div class="col-xs-12" style="margin-top: 20px;">
 
                                             <div class="submit-text">
@@ -770,43 +773,37 @@
                 evt.preventDefault();
                 var email_login = document.getElementById("email_login").value;
                 var password_login = document.getElementById("password_login").value;
-                // var fcm_login = document.getElementById("fcm_login").value;
+                var bodyData = {
+                    "email": "esl@gmail.com",
+                    "password": "12345%$#@!",
+                    "fcm": ""
+                }
+                var fcm_login = "";
                 console.log(email_login)
-                fetch("http://aaaserver-001-site31.ftempurl.com/" + lang + "/api/Auth/Login", {
+                fetch("http://aaaserver-001-site31.ftempurl.com/en/api/Auth/Login", {
                         method: 'POST',
-                        body: JSON.stringify({
-                            email: email_login,
-                            password: password_login,
-                            // fcm: fcm_login
-                        }),
                         headers: {
-                            "Access-Control-Allow-Origin": "*",
-                            "content-type": "application/json; charset=utf-8"
-                        }
-                    }).then(function (response) {
-                        console.log(response.status); // Will show you the status
-                        if (!response.ok) {
+                            "Content-Type": "application/json"
+                        },
+                        body: JSON.stringify(bodyData),
+
+                    }).then(res => {
+                        console.log(res);
+                        console.log(res.status); // Will show you the status
+                        if (!res.ok) {
                             var err = document.getElementById("Loginerror")
                             err.innerHTML = "<p>Email or Password is Invalid</p>"
-
                         } else
-
                             return response.json();
-
-
                     })
-
-                    .then(function (data) {
-
+                    .then(data => {
+                        console.log(data);
                         getProfileuser()
-
                         localStorage.setItem("Login", "Logout")
                         sessionStorage.setItem("token", JSON.stringify(data.token));
                         getProfileuser();
-                        window.location.replace(hostname + "/profile.html");
-
+                        window.location.replace(hostname + "/index.html");
                     })
-
             })
         }
         login()
